; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/cpufreq/extr_cpufreq-nforce2.c_nforce2_write_pll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/cpufreq/extr_cpufreq-nforce2.c_nforce2_write_pll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nforce2_dev = common dso_local global i32 0, align 4
@NFORCE2_PLLADR = common dso_local global i32 0, align 4
@NFORCE2_PLLREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @nforce2_write_pll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nforce2_write_pll(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @nforce2_dev, align 4
  %5 = load i32, i32* @NFORCE2_PLLADR, align 4
  %6 = call i32 @pci_write_config_dword(i32 %4, i32 %5, i32 0)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %15, %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp sle i32 %8, 63
  br i1 %9, label %10, label %18

10:                                               ; preds = %7
  %11 = load i32, i32* @nforce2_dev, align 4
  %12 = load i32, i32* @NFORCE2_PLLREG, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @pci_write_config_dword(i32 %11, i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %10
  %16 = load i32, i32* %3, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %3, align 4
  br label %7

18:                                               ; preds = %7
  ret void
}

declare dso_local i32 @pci_write_config_dword(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
